--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: DoveOfPeace;
+  src: url(../public/fonts/DoveOfPeace.ttf);
+}
+
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
@@ -77,13 +82,13 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  scroll-behavior: smooth;
+  background-color: rgb(0 32 46);
 }
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
+  background-color: rgb(0 32 46);
 }
 
 a {
@@ -95,4 +100,44 @@ a {
   html {
     color-scheme: dark;
   }
+}
+
+/* scrollbar style */
+
+/* Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #EB8C39 #0B1F2E;
+}
+
+/* Chrome, Edge and Safari */
+*::-webkit-scrollbar {
+  width: 5px;
+  width: 5px;
+}
+
+*::-webkit-scrollbar-track {
+  border-radius: 0px;
+  background-color: #0B1F2E;
+}
+
+*::-webkit-scrollbar-track:hover {
+  background-color: #102E44;
+}
+
+*::-webkit-scrollbar-track:active {
+  background-color: #091824;
+}
+
+*::-webkit-scrollbar-thumb {
+  border-radius: 0px;
+  background-color: #EB8C39;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: #D47E33;
+}
+
+*::-webkit-scrollbar-thumb:active {
+  background-color: #F1903B;
 }
