--- a/app/globals.css
+++ b/app/globals.css
@@ -128,7 +128,7 @@ a {
 }
 
 *::-webkit-scrollbar-track:hover {
-  background-color: #0B1F2E;
+  background-color: #102E44;
 }
 
 *::-webkit-scrollbar-track:active {
@@ -146,12 +146,4 @@ a {
 
 *::-webkit-scrollbar-thumb:active {
   background-color: #F1903B;
-}
-
-@keyframes flip {
-
-  0%,
-  80% {
-    transform: rotateY(360deg)
-  }
 }
