--- a/app/globals.css
+++ b/app/globals.css
@@ -19,10 +19,6 @@
     'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
     'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
   --primary-glow: conic-gradient(from 180deg at 50% 50%,
       #16abff33 0deg,
       #0885ff33 55deg,
@@ -88,12 +84,14 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
   scroll-behavior: smooth;
-  background-color: rgb(0 32 46);
+  background-image: url("../public/svg/background.svg");
+  backdrop-filter: blur(10px);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 body {
   color: rgb(var(--foreground-rgb));
-  background-color: rgb(0 32 46);
 }
 
 a {
@@ -145,4 +143,10 @@ a {
 
 *::-webkit-scrollbar-thumb:active {
   background-color: #F1903B;
+}
+
+footer {
+  background-image: url(../public/svg/footerCloud.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
