ui: color palette changed

--- a/app/globals.css
+++ b/app/globals.css
@@ -90,7 +90,8 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   /* background-color: #001a25; */
-  background: hsla(198, 100%, 7%, 1);
+  /* background: hsla(198, 100%, 7%, 1); */
+  background: #2D2727;
 }
 
 body {
