--- a/app/globals.css
+++ b/app/globals.css
@@ -113,7 +113,7 @@ a {
 /* Firefox */
 * {
   scrollbar-width: thin;
-  scrollbar-color: #EB8C39 #0B1F2E;
+  scrollbar-color: #7236be #0B1F2E;
 }
 
 /* Chrome, Edge and Safari */
@@ -124,28 +124,28 @@ a {
 
 *::-webkit-scrollbar-track {
   border-radius: 0px;
-  background-color: #0B1F2E;
+  background-color: #161616;
 }
 
 *::-webkit-scrollbar-track:hover {
-  background-color: #102E44;
+  background-color: #1d1d1d;
 }
 
 *::-webkit-scrollbar-track:active {
-  background-color: #091824;
+  background-color: #161616;
 }
 
 *::-webkit-scrollbar-thumb {
   border-radius: 0px;
-  background-color: #EB8C39;
+  background-color: #7236be;
 }
 
 *::-webkit-scrollbar-thumb:hover {
-  background-color: #D47E33;
+  background-color: #7d3ecf;
 }
 
 *::-webkit-scrollbar-thumb:active {
-  background-color: #F1903B;
+  background-color: #5d28a1;
 }
 
 /* footer {
