--- a/public/css/mainSection.css
+++ b/public/css/mainSection.css
@@ -3,9 +3,13 @@
 }
 
 .question {
-  @apply text-6xl font-semibold text-brand_bg-300
+  @apply text-6xl font-semibold text-[#fff]
 }
 
 .answer {
-  @apply text-2xl text-brand_bg-100
+  @apply text-2xl text-chart_bg-100
+}
+
+.informationCard {
+  @apply rounded-md bg-brand_bg-600/20
 }
