--- a/public/css/mainSection.css
+++ b/public/css/mainSection.css
@@ -3,11 +3,11 @@
 }
 
 .question {
-  @apply text-[40px] select-none md:text-6xl font-normal text-[#fff]
+  @apply text-xl select-none md:text-6xl font-normal text-[#fff]
 }
 
 .answer {
-  @apply text-base sm:text-xl leading-6 md:text-2xl text-gray-200 font-light
+  @apply text-lg font-light sm:text-xl md:text-2xl xl:text-3xl
 }
 
 .informationCard {
