--- a/app/globals.css
+++ b/app/globals.css
@@ -2,15 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-@font-face {
-  font-family: 'Fira Code';
-  src: url('/_next/static/fonts/FiraCode-Regular.woff2') format('woff2'),
-    url('/_next/static/fonts/FiraCode-Regular.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-}
-
-
 ::selection {
   background-color: rgb(135, 76, 212);
   color: white;
@@ -50,33 +41,13 @@
   --card-border-rgb: 131, 134, 135;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
 
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(to bottom right,
-        rgba(1, 65, 255, 0),
-        rgba(1, 65, 255, 0),
-        rgba(1, 65, 255, 0.3));
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(#ffffff80,
-        #ffffff40,
-        #ffffff30,
-        #ffffff20,
-        #ffffff10,
-        #ffffff10,
-        #ffffff80);
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+html,
+body {
+  max-width: 100vw;
+  background-size: 30px 30px;
+  background-image: radial-gradient(#232323 1.6px, transparent 1px);
+  @apply text-white bg-[#111] bg-repeat backdrop-blur-[10px] scroll-smooth overflow-x-hidden
 }
 
 * {
@@ -85,21 +56,17 @@
   margin: 0;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-  scroll-behavior: smooth;
-  backdrop-filter: blur(10px);
-  background-image: radial-gradient(#232323 1.6px, transparent 1px);
-  background-size: 30px 30px;
-  background-color: #111;
-  background-repeat: repeat;
+@media (prefers-color-scheme: light) {
+
+  html,
+  body {
+    max-width: 100vw;
+    background-size: 30px 30px;
+    background-image: radial-gradient(#777777 1.6px, transparent 1px);
+    @apply text-black bg-[#e6e6e6] bg-repeat backdrop-blur-[10px] scroll-smooth overflow-x-hidden
+  }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-}
 
 a {
   color: inherit;
