--- a/app/globals.css
+++ b/app/globals.css
@@ -41,42 +41,34 @@
   --card-border-rgb: 131, 134, 135;
 }
 
+@layer base {
+  @media (prefers-color-scheme: dark) {
 
-html,
-body {
-  max-width: 100vw;
-  background-size: 30px 30px;
-  background-image: radial-gradient(#232323 1.6px, transparent 1px);
-  @apply text-white bg-[#111] bg-repeat backdrop-blur-[10px] scroll-smooth overflow-x-hidden
+    html,
+    body {
+      max-width: 100vw;
+      background-size: 30px 30px;
+      background-image: radial-gradient(#232323 1.6px, transparent 1px);
+      @apply text-white bg-[#111] bg-repeat backdrop-blur-[10px] scroll-smooth overflow-x-hidden
+    }
+  }
+
+  @media (prefers-color-scheme: light) {
+
+    html,
+    body {
+      max-width: 100vw;
+      background-size: 30px 30px;
+      background-image: radial-gradient(#777777 1.6px, transparent 1px);
+      @apply text-black bg-[#e6e6e6] bg-repeat backdrop-blur-[10px] scroll-smooth overflow-x-hidden
+    }
+  }
 }
 
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-}
-
-@media (prefers-color-scheme: light) {
-
-  html,
-  body {
-    max-width: 100vw;
-    background-size: 30px 30px;
-    background-image: radial-gradient(#777777 1.6px, transparent 1px);
-    @apply text-black bg-[#e6e6e6] bg-repeat backdrop-blur-[10px] scroll-smooth overflow-x-hidden
-  }
-}
-
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
 }
 
 /* Firefox */
@@ -116,14 +108,6 @@ a {
 *::-webkit-scrollbar-thumb:active {
   background-color: #5d28a1;
 }
-
-/* footer {
-  background-image: url(../public/svg/footerCloud.svg);
-  background-repeat: no-repeat;
-  background-size: cover;
-} */
-
-/* glow.css */
 
 .extravertedGlow {
   box-shadow: 0px 4px 105px 10px rgba(66, 152, 180, 0.9)
