--- a/app/globals.css
+++ b/app/globals.css
@@ -208,9 +208,20 @@
   @apply relative border border-gray-400 bg-gray-800 shadow 
 }
 
-.bodydiv {
-  background-image: linear-gradient(rgb(26, 30, 41) 1px, transparent 1px),
-  linear-gradient(to right, rgb(26, 30, 41) 1px, transparent 1px);
-  background-size: 24px 24px;
-  background-color: rgba(255, 255, 255, 0);
+@layer utilities {
+  .bodydivLight {
+    background-image: linear-gradient(#c5c5c5 1px, transparent 1px), linear-gradient(to right, #c5c5c5 1px, transparent 1px);
+    background-size: 24px 24px;
+    background-color: rgb(255, 255, 255);
+  }
+  .dark .bodydivDark {
+    background-image: linear-gradient(#202431 1px, transparent 1px), linear-gradient(to right, #202431 1px, transparent 1px);
+    background-size: 24px 24px;
+    background-color: rgb(23 25 30 / var(--tw-bg-opacity));
+  }
+}
+
+
+.header-button:hover {
+  color: black
 }
