Loading screen updated

--- a/app/globals.css
+++ b/app/globals.css
@@ -225,3 +225,18 @@
 .header-button:hover {
   color: black
 }
+
+.progress {
+   width: 158.4px;
+   height: 26.4px;
+   mask: linear-gradient(90deg,#8f43ee 70%,#0000 0) left/20% 100%;
+   background: linear-gradient(#8f43ee 0 0) left/0% 100% no-repeat
+       #dbdcef;
+   animation: progress-422c3u 2s infinite steps(6);
+}
+
+@keyframes progress-422c3u {
+   100% {
+      background-size: 120% 100%;
+   }
+}
