--- a/app/globals.css
+++ b/app/globals.css
@@ -41,6 +41,10 @@
   --card-border-rgb: 131, 134, 135;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 @layer base {
   @media (prefers-color-scheme: dark) {
 
